--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "boilerplate",
-  "version": "0.0.1",
-  "author": "volodymyr dziubak",
+  "version": "1.0.0",
+  "author": "Volodymyr Dziubak",
   "license": "MIT",
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "bower": "~1.2.8",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compass": "~0.7.0",
-    "grunt-express": "~1.2.1",
-    "grunt-open": "~0.2.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-imageoptim": "~1.4.1"
+  "scripts": {
+    "preinstall": "bundle",
+    "postinstall": "./node_modules/.bin/bower install",
+    "start": "./node_modules/.bin/grunt"
+  },
+  "dependencies": {
+    "bower": "^1.3.12",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express": "^1.4.1"
   }
 }
