--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate",
+  "name": "tweetsToSoftware",
   "version": "1.0.0",
-  "homepage": "https://github.com/Velzevul/boilerplate",
+  "homepage": "",
   "authors": [
     "Volodymyr Dziubak <volodymyr.dzyubak@gmail.com>"
   ],
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "angular": "~1.3.15"
   }
 }
