--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "start": "./node_modules/.bin/grunt"
   },
   "dependencies": {
-    "bower": "^1.3.12",
+    "bower": "^1.4.1",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-compass": "^1.0.3",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-express": "^1.4.1"
+    "grunt-express": "^1.4.1",
+    "grunt-html2js": "^0.3.2",
+    "html2js": "^0.2.0",
+    "load-grunt-tasks": "^3.1.0"
   }
 }
