--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "modernizr": "~2.8.3",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "jquery": "~2.1.4"
   }
 }
