--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "modernizr": "~2.8.3",
     "angular": "~1.3.15",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "moment": "~2.10.2"
   }
 }
