--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "modernizr": "~2.8.3",
     "angular": "~1.3.15",
     "jquery": "~2.1.4",
-    "moment": "~2.10.2"
+    "moment": "~2.10.2",
+    "angular-moment": "~0.10.0"
   }
 }
