--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "~1.3.15",
     "jquery": "~2.1.4",
     "moment": "~2.10.2",
-    "angular-moment": "~0.10.0"
+    "angular-moment": "~0.10.0",
+    "d3": "~3.5.5"
   }
 }
