--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "./node_modules/.bin/grunt"
   },
   "dependencies": {
+    "bower": "^1.4.1",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.3",
