menu, panel, and toolbox

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "preinstall": "bundle",
-    "postinstall": "./node_modules/.bin/bower install",
-    "start": "./node_modules/.bin/grunt",
-    "deploy": "./node_modules/.bin/grunt dist && git push heroku master"
+    "postinstall": "bower install",
+    "start": "grunt",
+    "deploy": ".grunt dist && git push heroku master"
   },
   "dependencies": {
     "grunt": "^0.4.5",
