--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "grunt-express": "^1.4.1",
     "grunt-html2js": "^0.3.2",
     "grunt-processhtml": "^0.3.7",
+    "gulp": "^3.9.0",
+    "gulp-compass": "^2.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-connect": "^2.2.0",
     "html2js": "^0.2.0",
     "load-grunt-tasks": "^3.1.0"
   }
