--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,5 @@
 {
-  "name": "tweetsToSoftware",
-  "version": "1.0.0",
-  "homepage": "",
-  "authors": [
-    "Volodymyr Dziubak <volodymyr.dzyubak@gmail.com>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "name": "tweets-to-software",
   "dependencies": {
     "modernizr": "~2.8.3",
     "angular": "~1.3.15",
