--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
-  "name": "boilerplate",
-  "version": "1.0.0",
-  "author": "Volodymyr Dziubak",
-  "license": "MIT",
   "scripts": {
     "preinstall": "bundle",
     "postinstall": "bower install",
-    "start": "grunt",
-    "deploy": ".grunt dist && git push heroku master"
+    "start": "gulp"
   },
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.3",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-express": "^1.4.1",
-    "grunt-html2js": "^0.3.2",
-    "grunt-processhtml": "^0.3.7",
     "gulp": "^3.9.0",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
-    "html2js": "^0.2.0",
-    "load-grunt-tasks": "^3.1.0"
+    "gulp-html2js": "^0.2.0",
+    "gulp-plumber": "^1.0.1",
+    "load-grunt-tasks": "^3.1.0",
+    "gulp-concat": "^2.5.2"
   }
 }
