--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-html2js": "^0.2.0",
     "gulp-plumber": "^1.0.1",
-    "load-grunt-tasks": "^3.1.0",
-    "gulp-concat": "^2.5.2"
+    "gulp-util": "^3.0.5",
+    "load-grunt-tasks": "^3.1.0"
   }
 }
