--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "jquery": "~2.1.4",
     "moment": "~2.10.2",
     "angular-moment": "~0.10.0",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "angular-truncate": "*",
+    "angular-sanitize": "~1.4.3"
   }
 }
