--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,12 @@
   "name": "tweets-to-software",
   "dependencies": {
     "modernizr": "~2.8.3",
-    "angular": "~1.3.15",
     "jquery": "~2.1.4",
     "moment": "~2.10.2",
     "angular-moment": "~0.10.0",
     "d3": "~3.5.5",
     "angular-truncate": "*",
-    "angular-sanitize": "~1.4.3"
+    "angular-sanitize": "~1.4.3",
+    "angular": "~1.4.3"
   }
 }
