--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "d3": "~3.5.5",
     "angular-truncate": "*",
     "angular-sanitize": "~1.4.3",
-    "angular": "~1.4.3"
+    "angular": "~1.4.3",
+    "angular-route": "~1.4.4"
   }
 }
