--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,8 @@
     "angular-sanitize": "~1.4.3",
     "angular": "~1.4.3",
     "angular-route": "~1.4.4"
+  },
+  "resolutions": {
+    "angular": "1.4.3"
   }
 }
