--- a/bower.json
+++ b/bower.json
@@ -7,11 +7,11 @@
     "angular-moment": "~0.10.0",
     "d3": "~3.5.5",
     "angular-truncate": "*",
-    "angular-sanitize": "~1.4.3",
+    "angular-sanitize": "~1.4.4",
     "angular": "~1.4.3",
     "angular-route": "~1.4.4"
   },
   "resolutions": {
-    "angular": "1.4.3"
+    "angular": "~1.4.3"
   }
 }
